Cambios para nueva rama

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <div id="post">
+            <p>Hola que tal, solo un poco de contenido por aca</p>
+        </div>
+    </div>
     
 </body>
 </html>
