--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">Hola</div>
         <div id="post">
             <p>Hola que tal, solo un poco de contenido por aca</p>
         </div>
